# test-it-server

./: .gitignore  Dockerfile  README.md  endpoints.json  pyproject.toml  setup.sh  start.sh
api/: admin.py  consumer.py  models.py  urls.py  views.py
config/: asgi.py  settings.py  unfold_config.py  wsgi.py
media/cache/: test_46dbe659-668f-4ce6-9791-3373b1c86ab6.java
